--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,33 +1,58 @@
+# Simple workflow for deploying static Next.js site to GitHub Pages
 name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: [ main ]
-  workflow_dispatch:
+    branches: ["main"]  # Adjust to your default branch
+  workflow_dispatch:  # Allows manual triggers
 
-permissions:
-  contents: write
+# Allow only one concurrent deployment
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
-  build-and-deploy:
+  # Build job
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
-      - name: Setup Node
-        uses: actions/setup-node@v4
+        uses: actions/checkout@v4  # Use v4 for latest (v3 is deprecated)
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4  # Use v4
         with:
-          node-version: 18
-          cache: npm
-      - name: Install deps
-        run: npm ci
-      - name: Build static site
+          node-version: 20  # Matches your default Node 20
+          cache: 'npm'  # Caches dependencies
+
+      - name: Install dependencies
+        run: npm ci  # Faster and more reliable than npm install
+
+      - name: Build with Next.js
+        env:
+          BASE_PATH: ${{ github.event.repository.name }}  # Sets basePath for subpath deploys (e.g., /repo-name)
         run: npm run build
-      - name: Add .nojekyll
-        run: touch out/.nojekyll
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v4
+        # This generates the 'out/' directory due to output: 'export'
+
+      - name: Verify out/ directory exists
+        run: ls -la out/  # Debug: Check if out/ was created (fails if not)
+
+      - name: Create .nojekyll
+        run: touch out/.nojekyll  # Bypasses Jekyll on GitHub Pages
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3  # Use v3 (v2 deprecated)
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: out
-          force_orphan: true
+          path: ./out  # Uploads the static files
+
+  # Deployment job
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4  # Official Pages deploy action
